deploy: 0f357521310c2ad7bdc87b36dfa486873b87f905

--- a/_sources/book/references.ipynb
+++ b/_sources/book/references.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98734d5f",
+   "id": "5756df9a",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Bibliography\n",
     "\n",
-    "Aafasfasfa\n",
+    "```{bibliography}\n",
     "\n",
-    "## test\n",
-    "asfafasfafaf:\n",
-    "- asfsaf\n",
-    "  - asffaf"
+    "```"
    ]
   }
  ],
