--- a/_sources/book/introduction.ipynb
+++ b/_sources/book/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "feb7900b",
+   "id": "22068d00",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -12,7 +12,10 @@
     "## test\n",
     "asfafasfafaf:\n",
     "- asfsaf\n",
-    "  - asffaf"
+    "  - asffaf\n",
+    "\n",
+    "```{bibliography}\n",
+    "```"
    ]
   }
  ],
