deploy: b5e5097ee4451546a68ffb11bbf2ebd4ff317469

--- a/_sources/book/data_discovery.ipynb
+++ b/_sources/book/data_discovery.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4bb9672b",
+   "id": "bbf6eda6",
    "metadata": {},
    "source": [
     "# Data Discovery\n",
@@ -12,7 +12,36 @@
     "## test\n",
     "asfafasfafaf:\n",
     "- asfsaf\n",
-    "  - asffaf"
+    "  - asffaf\n",
+    "\n",
+    "## TODO mention metadata + standards in general\n",
+    "\n",
+    "## TODO mention the metadata on the CDRC website against the standards\n",
+    "\n",
+    "### Key Datasources\n",
+    "[![ONS Logo](https://www.nomisweb.co.uk/images/ons-logo.svg)](https://www.ons.gov.uk/) \n",
+    "\n",
+    "- [Official Census and Labour Market Statistics](https://www.nomisweb.co.uk)\n",
+    "- [Open Geography Portal](https://geoportal.statistics.gov.uk/)\n",
+    "\n",
+    "\n",
+    "[![CDRC Logo](https://data.cdrc.ac.uk/sites/default/files/cdrclogo_0.svg)](https://data.cdrc.ac.uk/) \n",
+    "\n",
+    "### CDRC Open Datasets (to review):\n",
+    "- [CDRC Residential Mobility Index](https://data.cdrc.ac.uk/dataset/cdrc-residential-mobility-index)\n",
+    "- [Internet User Classification](https://data.cdrc.ac.uk/dataset/internet-user-classification)\n",
+    "- [Spatial Signatures of Great Britain](https://data.cdrc.ac.uk/dataset/spatial-signatures-great-britain)\n",
+    "- [Classification of Multidimensional Open Data of Urban Morphology](https://data.cdrc.ac.uk/dataset/classification-multidimensional-open-data-urban-morphology-modum)\n",
+    "- [Ageing in Place Classification](https://data.cdrc.ac.uk/dataset/ageing-place-classification-aipc)\n",
+    "- [Spectus Origin-Destination Derived Mobility Data](https://data.cdrc.ac.uk/dataset/spectus-origin-destination-derived-mobility-data)\n",
+    "- [Retail Centre Boundaries and Open Indicators](https://data.cdrc.ac.uk/dataset/retail-centre-boundaries-and-open-indicators)\n",
+    "- [E-food Desert Index](https://data.cdrc.ac.uk/dataset/e-food-desert-index)\n",
+    "\n",
+    "### CDRC Safeguarded Datasets:\n",
+    "- Access Requests In Progress\n",
+    "\n",
+    "### CDRC Secure Datasets:\n",
+    "- Access Requests In Progress"
    ]
   }
  ],
