--- a/data_collection/cdrc.ipynb
+++ b/data_collection/cdrc.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CDRC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -32,7 +39,7 @@
     "con = duckdb.connect()\n",
     "for extension in (\"spatial\", \"parquet\", \"httpfs\"):\n",
     "    con.install_extension(extension)\n",
-    "    con.load_extension(extension)\n"
+    "    con.load_extension(extension)"
    ]
   },
   {
@@ -68,7 +75,7 @@
     "data_file = cdrc.joinpath(f\"{dataset}.parquet.gzip\")\n",
     "metadata_file = cdrc.joinpath(f\"{dataset}_metadata.parquet\")\n",
     "pdf_file = cdrc.joinpath(f\"{dataset}.pdf\")\n",
-    "lookup_file = cdrc.joinpath(f\"{dataset}_lookup.parquet\")\n"
+    "lookup_file = cdrc.joinpath(f\"{dataset}_lookup.parquet\")"
    ]
   },
   {
@@ -96,7 +103,7 @@
    "outputs": [],
    "source": [
     "gpkg = Path(\"OAC.gpkg\")\n",
-    "with zipfile.ZipFile(tmp_file, 'r') as zip_ref:\n",
+    "with zipfile.ZipFile(tmp_file, \"r\") as zip_ref:\n",
     "    zip_ref.extract(gpkg.name)\n",
     "fiona.listlayers(gpkg.name)"
    ]
@@ -169,7 +176,7 @@
     "metadata = cdrc_get_metadata(source_url, cdrc_session)\n",
     "\n",
     "if metadata is None:\n",
-    "    raise 'Error Getting Metadata'\n",
+    "    raise \"Error Getting Metadata\"\n",
     "\n",
     "metadata.to_parquet(metadata_file)\n",
     "metadata"
@@ -190,7 +197,7 @@
    "source": [
     "success = download_file(pdf_url, pdf_file, cdrc_session)\n",
     "if not success:\n",
-    "    raise f'Error Downloading Data: {data_url}'"
+    "    raise f\"Error Downloading Data: {data_url}\""
    ]
   },
   {
@@ -316,7 +323,9 @@
    "source": [
     "source_url = \"https://data.cdrc.ac.uk/dataset/cdrc-residential-mobility-index\"\n",
     "data_url = \"https://data.cdrc.ac.uk/system/files/hh_churn_oslaua_2023.csv\"\n",
-    "pdf_url = \"https://data.cdrc.ac.uk/system/files/CDRC%20Residential%20Mobility%20Index.pdf\"\n",
+    "pdf_url = (\n",
+    "    \"https://data.cdrc.ac.uk/system/files/CDRC%20Residential%20Mobility%20Index.pdf\"\n",
+    ")\n",
     "\n",
     "dataset = \"residential_mobility_lad_2023\"\n",
     "tmp_file = Path(data_url.split(\"/\")[-1].lower())\n",
@@ -341,7 +350,7 @@
    "source": [
     "success = download_file(data_url, tmp_file, cdrc_session)\n",
     "if not success:\n",
-    "  raise f'Error Downloading Data: {data_url}'"
+    "    raise f\"Error Downloading Data: {data_url}\""
    ]
   },
   {
@@ -375,7 +384,7 @@
    "source": [
     "metadata = cdrc_get_metadata(source_url, cdrc_session)\n",
     "if metadata is None:\n",
-    "    raise 'Error Getting Metadata'\n",
+    "    raise \"Error Getting Metadata\"\n",
     "\n",
     "metadata.to_parquet(metadata_file)\n",
     "metadata"
@@ -396,7 +405,7 @@
    "source": [
     "success = download_file(pdf_url, pdf_file, cdrc_session)\n",
     "if not success:\n",
-    "    raise f'Error Downloading Data: {pdf_url}'"
+    "    raise f\"Error Downloading Data: {pdf_url}\""
    ]
   },
   {
