deploy: 0d64ffd4ecdc283bb55214762cb7c456c6c9cfc4

--- a/_sources/book/data_collection.ipynb
+++ b/_sources/book/data_collection.ipynb
@@ -2,21 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1d88df74",
+   "id": "f9f1315f",
    "metadata": {},
    "source": [
-    "# Data Discovery\n",
+    "# Data Collection\n",
     "\n",
-    "Aafasfasfa\n",
+    "Data Access\n",
+    "Data Reusability\n",
+    "FAIR Principles in Practice\n",
     "\n",
-    "## test\n",
-    "asfafasfafaf:\n",
-    "- asfsaf\n",
-    "  - asffaf\n",
-    "\n",
-    "## TODO mention metadata + standards in general\n",
-    "\n",
-    "## TODO mention the metadata on the CDRC website against the standards\n",
+    "## Data Discovery\n",
+    "TODO mention metadata + standards in general\n",
+    "TODO mention the metadata on the CDRC website against the standards\n",
     "\n",
     "### Key Datasources\n",
     "[![ONS Logo](https://www.nomisweb.co.uk/images/ons-logo.svg)](https://www.ons.gov.uk/) \n",
@@ -41,7 +38,9 @@
     "- Access Requests In Progress\n",
     "\n",
     "### CDRC Secure Datasets:\n",
-    "- Access Requests In Progress"
+    "- Access Requests In Progress\n",
+    "\n",
+    "TODO mention the awkwardness of the CDRC api (use of dataset within api url vs as a parameter)"
    ]
   }
  ],
