--- a/_sources/book/data_processing.ipynb
+++ b/_sources/book/data_processing.ipynb
@@ -2,17 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4908cf8f",
+   "id": "5497e240",
    "metadata": {},
    "source": [
-    "# Data Reusability\n",
+    "# Data Processing\n",
     "\n",
-    "Aafasfasfa\n",
-    "\n",
-    "## test\n",
-    "asfafasfafaf:\n",
-    "- asfsaf\n",
-    "  - asffaf"
+    "### TODO mention postgis, code, avoiding point and click, reproducibility\n",
+    "### duckdb where possible for portability (write sql code once, run anywhere mostly)"
    ]
   }
  ],
