--- a/_sources/book/data_storage.ipynb
+++ b/_sources/book/data_storage.ipynb
@@ -2,17 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1492bc3f",
+   "id": "0af9dcac",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "# Data Storage\n",
     "\n",
-    "Aafasfasfa\n",
-    "\n",
+    "## TODO start with a brief introduction to data storage\n",
+    "## mention the different types of data storage formats\n",
+    "## go onto postgis env for future processing and working with data\n",
+    "## this dev container enables us to work with postgis and python ...\n",
     "## test\n",
+    "\n",
+    "## Mention potential for geoparquet in the future\n",
     "asfafasfafaf:\n",
     "- asfsaf\n",
-    "  - asffaf"
+    "  - asffaf\n",
+    "\n",
+    "```{bibliography}\n",
+    "```"
    ]
   }
  ],
