--- a/_sources/book/discussion.ipynb
+++ b/_sources/book/discussion.ipynb
@@ -2,17 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7f5e7a10",
+   "id": "f11b4a04",
    "metadata": {},
    "source": [
-    "# FAIR Principles in Practice\n",
-    "\n",
-    "Aafasfasfa\n",
-    "\n",
-    "## test\n",
-    "asfafasfafaf:\n",
-    "- asfsaf\n",
-    "  - asffaf"
+    "# Discussion\n",
+    "Aafasfasfa"
    ]
   }
  ],
