--- a/_sources/book/introduction.ipynb
+++ b/_sources/book/introduction.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e581c053",
+   "id": "dd9cb6aa",
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "\n",
-    "Aafasfasfa\n",
-    "\n",
-    "## test\n",
-    "asfafasfafaf:\n",
-    "- asfsaf\n",
-    "  - asffaf\n",
-    "\n",
-    "```{bibliography}\n",
-    "```"
+    "Aafasfasfa"
    ]
   }
  ],
