deploy: ceb1861ac900606656d9663bd5411c11958efba6

--- a/_sources/book/data_access.ipynb
+++ b/_sources/book/data_access.ipynb
@@ -2,13 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5497e240",
+   "id": "95d44cdc",
    "metadata": {},
    "source": [
-    "# Data Processing\n",
-    "\n",
-    "### TODO mention postgis, code, avoiding point and click, reproducibility\n",
-    "### duckdb where possible for portability (write sql code once, run anywhere mostly)"
+    "# Data Access\n",
+    "ttt"
    ]
   }
  ],
