--- a/book/references.bib
+++ b/book/references.bib
@@ -100,3 +100,47 @@
     howpublished = {\url{https://ggim.un.org/meetings/GGIM-committee/8th-Session/documents/Standards_Guide_2018.pdf}},
     note = {Version 2 Published August 2018}
 }
+
+@misc{scotland_census_2020,
+  title = {News release - Scotland’s Census to be moved to March 2022},
+  author = {{Scotland's Census}},
+  howpublished = {\url{https://www.scotlandscensus.gov.uk/news-and-events/news-release-scotland-s-census-to-be-moved-to-march-2022/}},
+  month = jul,
+  year = {2020},
+  note = {Accessed: 2024-01-01}
+}
+
+@misc{OAC2021,
+  author = {Wyszomierski, Jakub},
+  title = {Output Area Classification (2021)},
+  howpublished = {Consumer Data Research Centre (CDRC) Data},
+  year = {2023},
+  note = {Available online: \url{https://data.cdrc.ac.uk/dataset/output-area-classification-2021}},
+  institution = {Office for National Statistics and University College London}
+}
+
+@misc{IUC2018,
+  author = {Alexiou, Alexandros and Singleton, Alex},
+  title = {The 2018 Internet User Classification},
+  howpublished = {Consumer Data Research Centre (CDRC) Data},
+  year = {2018},
+  note = {Available online: \url{https://data.cdrc.ac.uk/dataset/internet-user-classification}},
+  institution = {Economic and Social Research Council},
+  attribution = {Contains National Statistics data Crown copyright and database right (2017); Contains Ofcom data (2016). Contains CDRC data from Data Partners (2017)}
+}
+
+@misc{cepicky2017switch,
+  title={Switch from Shapefile},
+  author={Cepicky, Jachym and OpenGeoLabs s.r.o.},
+  url={http://switchfromshapefile.org/},
+  year={2017},
+  note={Last modified: 2017-10-08}
+}
+
+@misc{cdrc_residential_mobility_index_2020,
+  title = {CDRC Residential Mobility Index},
+  author = {Consumer Data Research Centre (CDRC)},
+  year = {2020},
+  url = {https://data.cdrc.ac.uk/dataset/cdrc-residential-mobility-index},
+  note = {Modified: 2023-09-15; Release Date: 2020-07-16; Spatial/Geographical Coverage Location: United Kingdom; Temporal Coverage: January 1997 to January 2023; Granularity: LSOA and LAD; Year; Contact Email: data@cdrc.ac.uk; Licence: UK Open Government Licence (OGL)},
+}
