--- a/data_collection/cdrc.ipynb
+++ b/data_collection/cdrc.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Output Area Classification - 2021](https://data.cdrc.ac.uk/dataset/output-area-classification-2021)"
+    "## [Output Area Classification - 2021](https://data.cdrc.ac.uk/dataset/output-area-classification-2021)"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output Area Classification - 2021"
+    "### Output Area Classification - 2021"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output Area Classification - 2021 Metadata"
+    "### Output Area Classification - 2021 Metadata"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output Area Classification - 2021 PDF & OAC Lookups"
+    "### Output Area Classification - 2021 PDF & OAC Lookups"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [CDRC Residential Mobility Index](https://data.cdrc.ac.uk/dataset/cdrc-residential-mobility-index)\n",
+    "## [CDRC Residential Mobility Index](https://data.cdrc.ac.uk/dataset/cdrc-residential-mobility-index)\n",
     "\n",
     "Availale at LSOA and LAD, for initial work use higher level LAD\n",
     "\n",
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Residential Mobility (LAD 2011-2023)"
+    "### Residential Mobility (LAD 2011-2023)"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Residential Mobility (LAD 2011-2023) - Metadata"
+    "### Residential Mobility (LAD 2011-2023) - Metadata"
    ]
   },
   {
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Residential Mobility (LAD 2011-2023) - PDF"
+    "### Residential Mobility (LAD 2011-2023) - PDF"
    ]
   },
   {
