--- a/_sources/book/discussion.ipynb
+++ b/_sources/book/discussion.ipynb
@@ -2,11 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b19270f",
+   "id": "1667dfb5",
    "metadata": {},
    "source": [
     "# Discussion\n",
-    "Aafasfasfa"
+    "\n",
+    "## FAIR Principles Adherence\n",
+    "\n",
+    "### Findability\n",
+    "\n",
+    "Discoverability was facilitated by the ONS Geoportal and CDRC platforms, featuring unique identifiers and rich metadata. However, the availability of metadata via APIs or downloaded files would significantly enhance findability, particularly for technical users and automated processes.\n",
+    "\n",
+    "### Accessibility\n",
+    "\n",
+    "The CDRC platform registration requirement for data access, although straightforward, poses a barrier, potentially contradicting the easy and open FAIR principle of accessibility. However, the platform's user-friendly UI and extensive documentation enhance accessibility for non-technical users and researchers.\n",
+    "\n",
+    "### Interoperability\n",
+    "\n",
+    "Offered in various formats, the OAC dataset exemplifies interoperability, allowing integration with a diverse set of tools. However, the lack of machine-readable classification (OAC code names and meanings) limits automated processing requiring users to either extract the information from the PDF file or keep it around as a reference data dictionary, in which case the dataset is not wholly usable in isolation.\n",
+    "\n",
+    "### Reusability\n",
+    "\n",
+    "The extensive documentation, including a methodology paper, enhances its reusability. However, the UK Open Government License is a significant advantage in terms of data reuse and sharing, as it allows for the use, reuse, and redistribution of data with minimal restrictions.\n",
+    "\n",
+    "## SDI's Role in Data Access and Discovery\n",
+    "\n",
+    "The CDRC platform, as an SDI, plays a vital role in making spatial data accessible, acting as a bridge between national-level data and users. Its position in the SDI maturity model highlights its importance and the organisation of its thematic datasets enhances utility.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "The OAC dataset provides detailed demographic classifications and is useful in diverse applications such as urban planning, social research, and retail analysis. The versatility across different fields underlines the significance of adhering to FAIR principles for maximising data utility and impact. This project's automated data acquisition framework from the CDRC platform provides a foundation for future data collection efforts and can be mimicked for other data providers.\n",
+    "\n",
+    "The project reveals both advancements and gaps in geospatial data management, particularly in metadata standardization and open data access. SDIs like the CDRC are crucial in data discovery and access, yet require improvements for more inclusive, barrier-free access. The OAC dataset's versatility across different fields underlines the significance of adhering to FAIR principles for maximizing data utility and impact."
    ]
   }
  ],
