--- a/_sources/data_collection/todo.ipynb
+++ b/_sources/data_collection/todo.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c57c4ead",
+   "id": "b9208138",
    "metadata": {},
    "source": [
-    "### Key Datasources\n",
-    "[![ONS Logo](https://www.nomisweb.co.uk/images/ons-logo.svg)](https://www.ons.gov.uk/) \n",
+    "# Key Data Sources & Datasets\n",
+    "\n",
+    "## Office for National Statistics (ONS)\n",
+    "\n",
+    "[![ONS Logo](https://www.nomisweb.co.uk/images/ons-logo.svg)](https://www.ons.gov.uk/)\n",
     "\n",
     "- [Official Census and Labour Market Statistics](https://www.nomisweb.co.uk)\n",
     "- [Open Geography Portal](https://geoportal.statistics.gov.uk/)\n",
     "\n",
+    "## Consumer Data Research Centre (CDRC)\n",
     "\n",
-    "[![CDRC Logo](https://data.cdrc.ac.uk/sites/default/files/cdrclogo_0.svg)](https://data.cdrc.ac.uk/) \n",
+    "[![CDRC Logo](https://data.cdrc.ac.uk/sites/default/files/cdrclogo_0.svg)](https://data.cdrc.ac.uk/)\n",
     "\n",
-    "### CDRC Open Datasets (to review):\n",
+    "### CDRC Open Datasets (for review)\n",
+    "\n",
     "- [CDRC Residential Mobility Index](https://data.cdrc.ac.uk/dataset/cdrc-residential-mobility-index)\n",
     "- [Internet User Classification](https://data.cdrc.ac.uk/dataset/internet-user-classification)\n",
     "- [Spatial Signatures of Great Britain](https://data.cdrc.ac.uk/dataset/spatial-signatures-great-britain)\n",
@@ -24,13 +29,13 @@
     "- [Retail Centre Boundaries and Open Indicators](https://data.cdrc.ac.uk/dataset/retail-centre-boundaries-and-open-indicators)\n",
     "- [E-food Desert Index](https://data.cdrc.ac.uk/dataset/e-food-desert-index)\n",
     "\n",
-    "### CDRC Safeguarded Datasets:\n",
+    "### CDRC Safeguarded Datasets\n",
+    "\n",
     "- Access Requests In Progress\n",
     "\n",
-    "### CDRC Secure Datasets:\n",
-    "- Access Requests In Progress\n",
+    "### CDRC Secure Datasets\n",
     "\n",
-    "TODO mention the awkwardness of the CDRC api (use of dataset within api url vs as a parameter)"
+    "- Access Requests In Progress"
    ]
   }
  ],
