deploy: 6a9f00b3925161e863ea84d6b114bc2c3b7d9c44

--- a/_sources/book/discussion.ipynb
+++ b/_sources/book/discussion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1667dfb5",
+   "id": "e15b58e8",
    "metadata": {},
    "source": [
     "# Discussion\n",
@@ -31,9 +31,7 @@
     "\n",
     "## Conclusion\n",
     "\n",
-    "The OAC dataset provides detailed demographic classifications and is useful in diverse applications such as urban planning, social research, and retail analysis. The versatility across different fields underlines the significance of adhering to FAIR principles for maximising data utility and impact. This project's automated data acquisition framework from the CDRC platform provides a foundation for future data collection efforts and can be mimicked for other data providers.\n",
-    "\n",
-    "The project reveals both advancements and gaps in geospatial data management, particularly in metadata standardization and open data access. SDIs like the CDRC are crucial in data discovery and access, yet require improvements for more inclusive, barrier-free access. The OAC dataset's versatility across different fields underlines the significance of adhering to FAIR principles for maximizing data utility and impact."
+    "The project reveals both advancements and gaps in geospatial data management, particularly in metadata standardisation and open data access. SDIs like the CDRC are crucial in data discovery and access, yet require improvements for more inclusive, barrier-free access. The OAC dataset provides detailed demographic classifications and is useful in diverse applications such as urban planning, social research, and retail analysis. The versatility across different fields underlines the significance of adhering to FAIR principles for maximising data utility and impact. This project's automated data acquisition framework from the CDRC platform provides a foundation for future data collection efforts and can be altered for other data providers."
    ]
   }
  ],
